<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Education">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">
            <ImageButton
                android:id="@+id/home"
                android:layout_marginTop="13dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="35dp"
                android:src="@drawable/home1"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/symb"
                android:text="Jiseaty!!"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="35dp" />

            <ImageButton
                android:id="@+id/back"
                android:layout_marginTop="13dp"
                android:layout_width="27dp"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="35dp"
                android:src="@drawable/back1"
                android:scaleType="fitCenter"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/allbut"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_alignParentStart="true"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/type"
                android:text="All"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/edubut"
                android:layout_width="wrap_content"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_height="40sp"
                android:layout_centerInParent="true"
                android:background="@drawable/own_rounded_button"
                android:fontFamily="@font/type"
                android:text="Education"
                android:textColor="@color/lite_black"
                android:textSize="12sp" />

            <Button
                android:id="@+id/mapbut"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:background="@drawable/rounded_button"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/type"
                android:text="Explore"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/beck"
                    android:text="Select Your Department"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18dp" />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/civbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgciv"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/civil1"
                    app:shapeAppearanceOverlay="@style/corner" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:id="@+id/civtext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/civ"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/csebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgcse"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/cse1"
                    app:shapeAppearanceOverlay="@style/corner" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/cse"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/ecebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ece1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/ece"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/eeebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/eee1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/eee"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/eiebut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ei1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/eie"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/ibtbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ibt1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/ibt"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/itbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/it1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/it"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/mecbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/mech1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/mech"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/prodbut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_background">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/prod1"
                    app:shapeAppearanceOverlay="@style/corner" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginStart="140dp"
                    android:layout_marginEnd="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/space"
                        android:text="@string/prod"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>